--- a/views/view/food.ejs
+++ b/views/view/food.ejs
@@ -13,9 +13,9 @@
       body
   {
           background-color: cornsilk;
-          background-image: url('https://img.freepik.com/free-photo/top-view-circular-food-frame_23-2148723455.jpg?w=996&t=st=1670765143~exp=1670765743~hmac=db6dcfd4eb921213c44df53e965680f34fb82c31733cfbc362f446d12a4b60aa'); 
+          background-image: url('https://c4.wallpaperflare.com/wallpaper/495/760/53/cuisine-food-india-indian-wallpaper-preview.jpg'); 
           background-repeat: repeat-y;
-          background-size: 1250px;
+          background-size: 1245px;
           background-position-x: center;
   
   }
