airport api added successfully

--- a/views/view/contact.ejs
+++ b/views/view/contact.ejs
@@ -27,11 +27,11 @@
     }
   </style>
   <div id="paragraph">
-    <h1>Contact me</h1>
+    <h1>Contact us</h1>
     <p id="lower">
-      Hello There, I am Midhun,<br> developer of this website,<br> for any suggestion or support regarding
-      the website feel free to contact me through the contact ids given below.<br>
-      Thank you for visiting Buy at Budget.
+      Hello There,<br> thank you using Buy at Budget,<br> for any suggestion or support regarding
+      the website feel free to contact us through the contact ids given below.<br>
+      
     </p>
   </div>
   <div id = "container">
