background image of food.ejs changed

--- a/views/view/food.ejs
+++ b/views/view/food.ejs
@@ -15,7 +15,8 @@
     body
   {
           background-color: cornsilk;
-          background-image: url('https://img.freepik.com/free-photo/top-view-circular-food-frame_23-2148723455.jpg?w=996&t=st=1670765143~exp=1670765743~hmac=db6dcfd4eb921213c44df53e965680f34fb82c31733cfbc362f446d12a4b60aa'); 
+          /*background-image: url('https://img.freepik.com/free-photo/top-view-circular-food-frame_23-2148723455.jpg?w=996&t=st=1670765143~exp=1670765743~hmac=db6dcfd4eb921213c44df53e965680f34fb82c31733cfbc362f446d12a4b60aa');*/
+          background-image: url('https://images.cdn4.stockunlimited.net/preview1300/food-background_1305818.jpg'); 
           background-repeat: repeat-y;
           background-size: 1300px;
           background-position-x: center;
