--- a/views/view/contact.ejs
+++ b/views/view/contact.ejs
@@ -29,7 +29,7 @@
   <div id="paragraph">
     <h1>Contact us</h1>
     <p id="lower">
-      Hello There,<br> thank you using Buy at Budget,<br> for any suggestion or support regarding
+      Hello There,<br> Thank you using Buy at Budget,<br> for any suggestion or support regarding
       the website feel free to contact us through the contact ids given below.<br>
       
     </p>
