--- a/views/view/trips.ejs
+++ b/views/view/trips.ejs
@@ -73,13 +73,13 @@
         </div>
         <br>
         <div id="input_destination">
-          <input type="text" class="form-control" id="end_location" name="end_location" placeholder="enter destination">
+          <input type="text" class="form-control" id="end_location" name="end_location" placeholder="enter destination" autocomplete="off">
         </div>
 
         <br>
         <div>
           <!-- <label for="birthdaytime"></label> -->
-          <input type="date" id="birthdaytime" name="departure_date">
+          <input type="date" id="birthdaytime" name="departure_date" autocomplete="off">
         </div>
         
         <div id="food_fare_button" class="d-flex justify-content-center my-4">
