--- a/views/view/flights_result.ejs
+++ b/views/view/flights_result.ejs
@@ -18,6 +18,7 @@
           <th>food name</th> -->
           <!-- <th>name</th> -->
           <th>price</th>
+		  <th>airline</th>
           <th>link</th>
           <!-- <th>ratings</th> -->
     </tr>
@@ -40,7 +41,9 @@
           var row = `<tr>
            
             <td>${data[i].price}</td>
-            <td><button><a href="${data[i].link} target="_blank">buy it</a></button></td>
+			<td>${data[i].airline}</td>
+            <td><button><a href="${data[i].link} target="_blank">Let's Go</a></button></td>
+			
           </tr>
           `
           table.innerHTML += row;
