--- a/views/view/food.ejs
+++ b/views/view/food.ejs
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">Buy at Budget</a>
+        <a class="navbar-brand text-white" href="/">Buy at Budget</a>
         <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon bg-light"></span>
         </button>
@@ -35,9 +35,9 @@
               <a class="nav-link active" aria-current="page" href="#"></a>
             </li>
             <li class="nav-item">
-              <form action="/food" method="post">
+              <form action="/course" method="post">
                 <button class="btn text-white">
-                  Food🍔
+                  Courses📚
                 </button>
               </form>
             </li>
@@ -68,7 +68,7 @@
     </nav>
 
     <div class="container my-5">
-      <form action="/getCheapestFood" method="post" id="input_food_form">
+      <form action="/course" method="post" id="input_food_form">
         <div id="input_food_div">
           <input type="text"  class="form-control my-4" id="input_food" name = "food_name" placeholder="enter food name" autocomplete="off">
         </div>
