--- a/views/view/shopping.ejs
+++ b/views/view/shopping.ejs
@@ -36,9 +36,9 @@
               <a class="nav-link active" aria-current="page" href="#"></a>
             </li>
             <li class="nav-item">
-              <form action="/course" method="post">
+              <form action="/groceries" method="post">
                 <button class="btn text-white">
-                  Courses📚
+                  Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
                 </button>
               </form>
             </li>
