--- a/views/view/shopping_result.ejs
+++ b/views/view/shopping_result.ejs
@@ -42,7 +42,7 @@
             <td>${data[i].names || data[i].name_of_product}</td>
             <td>${data[i].price}</td>
 			<td>${data[i].company}</td>
-            <td><button><a href="${data[i].url} target="_blank">buy it</a></button></td>
+            <td><button><a href="${data[i].url}">buy it</a></button></td>
             <td>${data[i].ratings}</td>
           </tr>
           `
