--- a/views/view/groceries_result.ejs
+++ b/views/view/groceries_result.ejs
@@ -17,6 +17,7 @@
         <!-- <th>s.no</th>
           <th>food name</th> -->
           <th>name</th>
+          <th>image</th>
           <th>price</th>
 		  <th>company</th>
           <th>link</th>
@@ -39,6 +40,7 @@
         for(var i = 0; i < data.length; i++) {
           var row = `<tr>
             <td>${data[i].name}</td>
+            <td><img src=${data[i].image} width=150 height=150></td>
             <td>${data[i].price}</td>
 			<td>${data[i].company}</td>
             <td><button><a href="${data[i].link}">buy it</a></button></td>
