--- a/views/view/shopping.ejs
+++ b/views/view/shopping.ejs
@@ -64,12 +64,14 @@
               </form>
             </li>
           </ul>
+          <form action="/userlogin", method="get">
+            <button class="rounded-circle">
+              <img class="rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcZsL6PVn0SNiabAKz7js0QknS2ilJam19QQ&usqp=CAU" alt="" srcset="" height="30" width="30">
+            </button>
+          </form>
         </div>
       </div>
     </nav>
-
-
-
 
     <div class="container my-5">
       <form action="/shopitem" method="post">
