--- a/views/view/groceries.ejs
+++ b/views/view/groceries.ejs
@@ -24,49 +24,54 @@
   }
   </style>
 
-    <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="/">Buy at Budget</a>
-        <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon bg-light"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"></a>
-            </li>
-            <li class="nav-item">
-              <form action="/groceries" method="post">
-                <button class="btn text-white">
-                  Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
-                </button>
-              </form>
-            </li>
-            <li class="nav-item">
-              <form action="/trips" method="post">
-                <button class="btn text-white">
-                  Trips✈️
-                </button>
-              </form>
-            </li>
-            <li class="nav-item">
-              <form action="/shopping" method="post">
-                <button class="btn text-white">
-                  Shopping🛒
-                </button>
-              </form>
-            </li>
-            <li class="nav-item">
-              <form action="/contact" method="post">
-                <button class="btn text-white">
-                  Contact📞
-                </button>
-              </form>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="/">Buy at Budget</a>
+      <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon bg-light"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <form action="/groceries" method="post">
+              <button class="btn text-white">
+                Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
+              </button>
+            </form>
+          </li>
+          <li class="nav-item">
+            <form action="/trips" method="post">
+              <button class="btn text-white">
+                Trips✈️
+              </button>
+            </form>
+          </li>
+          <li class="nav-item">
+            <form action="/shopping" method="post">
+              <button class="btn text-white">
+                Shopping🛒
+              </button>
+            </form>
+          </li>
+          <li class="nav-item">
+            <form action="/contact" method="post">
+              <button class="btn text-white">
+                Contact📞
+              </button>
+            </form>
+          </li>
+        </ul>
+        <form action="/userlogin", method="get">
+          <button class="rounded-circle">
+            <img class="rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcZsL6PVn0SNiabAKz7js0QknS2ilJam19QQ&usqp=CAU" alt="" srcset="" height="30" width="30">
+          </button>
+        </form>
       </div>
-    </nav>
+    </div>
+  </nav>
 
     <div class="container my-5">
       <form action="/findCheapestGroceries" method="post" id="input_food_form">
