--- a/views/view/shopping.ejs
+++ b/views/view/shopping.ejs
@@ -38,7 +38,8 @@
             <li class="nav-item">
               <form action="/groceries" method="post">
                 <button class="btn text-white">
-                  Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
+                  <!-- Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20"> -->
+                  Groceries 🍚
                 </button>
               </form>
             </li>
@@ -84,6 +85,13 @@
         </div>
 
       </form>
+      <!-- <div class="card">
+        <img src="/public/groceries.png" alt="Avatar" style="width:100%">
+        <div class="container">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Engineer</p>
+        </div> -->
+    </div>
     </div>
 </body>
 </html>
