--- a/views/view/groceries.ejs
+++ b/views/view/groceries.ejs
@@ -23,7 +23,7 @@
   
   }
   </style>
-
+  <!-- https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg -->
   <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="/">Buy at Budget</a>
@@ -38,7 +38,7 @@
           <li class="nav-item">
             <form action="/groceries" method="post">
               <button class="btn text-white">
-                Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
+                Groceries 🍚
               </button>
             </form>
           </li>
