--- a/views/view/login_result.ejs
+++ b/views/view/login_result.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Document</title>
+  <title>Login res</title>
 </head>
 <body>
   <div class="alert alert-danger" role="alert" id="red_alert">
