--- a/views/view/trips.ejs
+++ b/views/view/trips.ejs
@@ -36,7 +36,8 @@
           <li class="nav-item">
             <form action="/groceries" method="post">
               <button class="btn text-white">
-                Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20">
+                <!-- Groceries <img src="https://as2.ftcdn.net/v2/jpg/04/58/91/93/1000_F_458919360_NUF4GxrLoeOMJvjSb2NsGNgoGovGzsMX.jpg" width="20" height="20"> -->
+                Groceries 🍚
               </button>
             </form>
           </li>
